# node_text_detector

./: .gitignore  CMakeLists.txt  README.md  classify.xml  cmake_install.js  example.js  example.txt  package.json
cmake/: HunterGate.cmake
cmake/Hunter/: config.cmake
src/: sync.cc
src/new_ocr/: AvailableChar.cpp  AvailableChar.hpp  AvailablePlate.cpp  AvailablePlate.hpp  Begin.hpp  ExtractPlates.cpp  ExtractPlates.hpp  FindChars.cpp  FindChars.hpp  Main.h  Pre_process.cpp  Pre_process.hpp  begin.cpp  main.cpp  sync.cpp
src/ocr/: ocr.cpp  ocr.hpp
src/util/: box.hpp  decoded_text.hpp  output_ocr.hpp
tessdata/: eng.traineddata
